# brain-tumor-medical-imaging

./: .editorconfig  .env.example  .gitattributes  .gitignore  .importlinter  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LOCAL_SETUP.md  PROJECT_REVIEW_PACKAGE.md  README.md  SECURITY.md  STARTUP_GUIDE.md  backend_ci_fix_report.md  backend_ci_verification_report.md  create_structure.py  docker-compose.prod.yml  docker-compose.yml  experiment_manifest.json  final_local_verification_report.md  manage_local.py  parse_api.py  repository_dataset_migration_report.md  runtime_statistics.json  start.ps1  start.sh  training_summary.json
backend/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/ai/: __init__.py
backend/ai/armt_gan/: __init__.py
backend/ai/artifacts/: manager.py
backend/ai/classification/benchmark/: benchmark.py
backend/ai/classification/calibration/: calibrator.py
backend/ai/classification/datasets/: base.py  sample.py
backend/ai/classification/inference/: inference.py
backend/ai/classification/metrics/: metrics.py
backend/ai/classification/models/: base.py  baseline_cnn.py  hybrid_cnn.py
backend/ai/classification/pipeline/: input_pipeline.py
backend/ai/classification/transforms/: transforms.py
backend/ai/config/: execution_profiles.py  inference.py  profiles.py  training.py  training_config.py
backend/ai/dataset_registry/: registry.py
backend/ai/datasets/: __init__.py  base.py  brats_adapter.py  harmonizer.py  health_report.py  kaggle_adapter.py  metadata.py  provenance.py  registry.json  registry.py  split_manager.py  splits.py  validator.py  versioning.py
backend/ai/datasets/adapters/: __init__.py  base.py  brats.py  kaggle.py  pytorch.py
backend/ai/datasets/manifests/: development.json  external_validation.json  research.json
backend/ai/evaluation/: __init__.py  failure_analysis.py
backend/ai/evaluation/robustness/: __init__.py  analyzers.py  calculators.py  cross_validation.py  dataset_stats.py  health_score.py  monitors.py  report.py
backend/ai/experiment_tracking/: base.py  callbacks.py  collector.py  experiment_manager.py
backend/ai/hybrid_cnn/: __init__.py
backend/ai/inference/: __init__.py  context.py  manifest.py  orchestrator.py  policy.py  registry.py
backend/ai/inference/stages/: __init__.py  base.py  classification.py  explainability.py  (+7 more)
backend/ai/interfaces/: __init__.py  features.py  models.py
backend/ai/metrics/: __init__.py
backend/ai/metrics_registry/: registry.py
backend/ai/model_factory/: factory.py
backend/ai/model_registry/: __init__.py  registry.py
backend/ai/models/: __init__.py  base.py  benchmark_registry.py  gan_registry.py  model_card.py  promotion.py  unet.py
backend/ai/pipeline/: evaluate_models.py  evaluation.py  inference.py  profiler.py  run_classification_validation.py  run_experimental_validation.py  runner.py  train_armt_gan.py  train_segmentation.py  training.py  visualize_comparison.py
backend/ai/preprocessing/: __init__.py
backend/ai/segmentation/: __init__.py
backend/ai/serving/: __init__.py
backend/ai/state/: manager.py
backend/ai/training/: __init__.py  callbacks.py  components.py  data.py  engine.py  events.py  hardware.py  manager.py  policies.py  providers.py  strategy.py  visualization.py
backend/ai/transform_registry/: registry.py
backend/ai/xai/: __init__.py
backend/alembic/: env.py
backend/alembic/versions/: 20f912b3ae3d_add_phase_1_5_models.py  37bfd0726357_add_inference_and_upload_models.py
backend/api/: dependencies.py  errors.py
backend/api/health/: router.py
backend/api/v1/: router.py
backend/core/: constants.py
backend/core/config/: __init__.py  base.py  development.py  feature_flags.py  production.py  testing.py
backend/core/logging/: config.py
backend/core/middleware/: api_version.py  correlation.py  database.py  idempotency.py  logging.py  observability.py  rate_limit.py  security_headers.py  timeout.py  upload_size.py
backend/core/security/: hashing.py  jwt.py
backend/medical/: __init__.py  domain.py  exceptions.py
backend/medical/converters/: __init__.py
backend/medical/dicom/: __init__.py  builder.py  conversion.py  loading.py  parsing.py  validation.py
backend/medical/io/: __init__.py  nifti.py
backend/medical/metadata/: __init__.py  models.py
backend/medical/preprocessing/: __init__.py  interfaces.py
backend/medical/quality/: __init__.py  interfaces.py
backend/medical/transforms/: __init__.py
backend/medical/utils/: __init__.py
backend/medical/validation/: __init__.py
backend/medical/visualization/: __init__.py  interfaces.py  matplotlib_impl.py
backend/models/: __init__.py  audit.py  inference.py  mixins.py  patient.py  prediction.py  segmentation.py  study.py  upload.py  user.py
backend/outputs_val/: README.md
backend/outputs_val/registries/: benchmarks.json  promotion_state.json
backend/repositories/: audit.py  inference.py  patient.py  prediction.py  segmentation.py  study.py  upload.py  user.py
backend/schemas/: common.py  inference.py  upload.py
backend/scripts/: create_minimal_brats.py  extract_runtime_stats.py  run_full_dataset_validation.py  test_inference_pipeline.py  test_robustness.py  test_xai.py  train_unet_baseline.py  validate_checkpoints.py  validate_dataset.py  verify_experiment_manager.py  verify_functional_training.py  verify_training_integration_mocked.py
backend/services/: database.py  inference_service.py
backend/storage/: __init__.py  lifecycle.py  local_storage.py  object_storage.py  s3_storage.py  security.py
backend/tests/: conftest.py
backend/tests/api/: test_health.py  test_inference.py
backend/tests/integration/: test_database.py
backend/tests/unit/: test_settings.py
backend/tools/experiment_dashboard/: app.py
backend/workers/: celery_app.py  cleanup_tasks.py  inference_tasks.py
backend/workers/tasks/: audit_tasks.py
(+129 files in other folders)
