[project]
name = "armt-gan-backend"
version = "0.1.0"
description = "ARMT-GAN Platform – Medical imaging backend for brain tumor analysis"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [{name = "ARMT-GAN Team"}]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "pwdlib[argon2]>=0.2.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.18",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "boto3>=1.35.0",
    "celery>=5.6.3",
    "redis>=8.0.1",
    "prometheus-client>=0.25.0",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-sdk>=1.43.0",
    "opentelemetry-instrumentation-fastapi>=0.64b0",
    "pydicom>=3.0.2",
    "filetype>=1.2.0",
    "tenacity>=9.1.4",
    "numpy>=2.1.0",
    "nibabel>=5.3.0",
    "matplotlib>=3.9.2",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "torchaudio>=2.11.0",
    "monai>=1.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "sqlalchemy[mypy]>=2.0.36",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = ["S101", "S105", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["core", "api", "models", "repositories", "schemas", "services", "storage", "ai", "medical"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["jose.*", "pwdlib.*", "boto3.*", "botocore.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
